--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="intro-text">
             <span class="Font">Hi </span> <span class="font"> I'm Yashaswini Jain</span>
             <br>
-            <span class="Font">FULL TIME THINKER</span>
+            <span class="Font">FULL TIME Developer</span>
         </div>
     </section>
     <section class="proposal">
@@ -58,7 +58,7 @@
         </div></div>
     </div>
     <footer>
-    <div id="footer">Project by Kanu Chinese</div>
+    <div id="footer">Project by Yosh Jayn</div>
     </footer>
 </body>
 </html>
